# dotfiles

./: .gitignore  CNAME  README.md  apps.lock.json  bootstrap.sh  external.lock.json  julsh.terminal  migrate_shell_configs.sh  setup.sh  update.sh
.github/workflows/: deploy.yml
dot_files/: .bashrc  .gitconfig  .profile  .zshrc
dot_files/.config/shpool/: config.toml
dotfiles/: .bash_profile  .bashrc  .bashrc.shared  .dotfiles_update.sh  .gitconfig  .profile  .profile.shared  .utils.sh  .zprofile  .zshrc  .zshrc.shared
dotfiles/.claude/: settings.json  statusline-kawaii.sh
dotfiles/.codex/: AGENTS.md  config.toml
dotfiles/.config/: starship.toml
hooks/: pre-push
launchagent_remap_capslock_to_backspace/: capslock_to_backspace.sh  com.capslock_to_backspace.plist  setup.sh
macos/: capslock_remap.swift  capslock_to_backspace.sh  com.julsh.sleeponlidclose.plist  setup.sh  setup_wezterm.sh  sleep_on_lid_close.sh
macos/raycast_scripts/: build_spotlight_apps.sh  open-finder-from-terminal.applescript  open-terminal-from-finder.applescript  run-command-in-finder-dir.applescript
manual/launchagent_user_timemachine_backup_serenity/: backup_to_purple_if_available.sh  com.julsh.backuptm.plist  setup.sh
manual/raycast_scripts/: generate-password.sh  open-terminal-from-finder.applescript
nix/: flake.nix  home.nix  install.sh  nix.custom.conf  setup-internal.sh
nix/shell/: bashrc.sh  profile.sh  utils.sh  zshrc.sh
research_engine/: README.md  pyproject.toml
research_engine/src/research_engine/: antigravity_client.py  cli.py  config.py  engine.py  models.py
(+22 files in other folders)
